--- a/assets/snippets/star_rating/assets/resources/css/style.css
+++ b/assets/snippets/star_rating/assets/resources/css/style.css
@@ -1,85 +1,97 @@
 .star-rating-container {
-    position: relative;
+  position: relative;
 }
+
 .star-rating {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
+
 .star-rating-info {
-    display: inline-block;
+  display: inline-block;
 }
+
 .star-rating span, .star-rating img {
-    margin-right: 2px;
+  margin-right: 2px;
 }
+
 .star-rating-container.pink .star-on-png {
-    color: #FF00B5;
+  color: #ff00b5;
 }
+
 .star-rating-container.pink .star-off-png {
-    color: #ddd;
+  color: #ddd;
 }
+
 .star-rating-container.pink .star-half-png {
-    color: #FF00B5;
+  color: #ff00b5;
 }
+
 .mask {
-    background-color: rgba(20, 20, 20, 0.2);
-    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
-    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-    background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-    -webkit-background-size: 40px 40px;
-    -moz-background-size: 40px 40px;
-    -o-background-size: 40px 40px;
-    background-size: 40px 40px;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: -5px;
-    width: 100%;
-    z-index: 100;
-    -webkit-animation: progress-bar-stripes 2s linear infinite;
-    -moz-animation: progress-bar-stripes 2s linear infinite;
-    -ms-animation: progress-bar-stripes 2s linear infinite;
-    -o-animation: progress-bar-stripes 2s linear infinite;
-    animation: progress-bar-stripes 2s linear infinite;
+  background-color: rgba(20, 20, 20, 0.2);
+  background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  -webkit-background-size: 40px 40px;
+  -moz-background-size: 40px 40px;
+  -o-background-size: 40px 40px;
+  background-size: 40px 40px;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: -5px;
+  width: 100%;
+  z-index: 100;
+  -webkit-animation: progress-bar-stripes 2s linear infinite;
+  -moz-animation: progress-bar-stripes 2s linear infinite;
+  -ms-animation: progress-bar-stripes 2s linear infinite;
+  -o-animation: progress-bar-stripes 2s linear infinite;
+  animation: progress-bar-stripes 2s linear infinite;
 }
+
 @-webkit-keyframes progress-bar-stripes {
-    from {
-        background-position: 40px 0
-    }
-    to {
-        background-position: 0 0
-    }
+  from {
+    background-position: 40px 0
+  }
+  to {
+    background-position: 0 0
+  }
 }
+
 @-moz-keyframes progress-bar-stripes {
-    from {
-        background-position: 40px 0
-    }
-    to {
-        background-position: 0 0
-    }
+  from {
+    background-position: 40px 0
+  }
+  to {
+    background-position: 0 0
+  }
 }
+
 @-ms-keyframes progress-bar-stripes {
-    from {
-        background-position: 40px 0
-    }
-    to {
-        background-position: 0 0
-    }
+  from {
+    background-position: 40px 0
+  }
+  to {
+    background-position: 0 0
+  }
 }
+
 @-o-keyframes progress-bar-stripes {
-    from {
-        background-position: 0 0
-    }
-    to {
-        background-position: 40px 0
-    }
+  from {
+    background-position: 0 0
+  }
+  to {
+    background-position: 40px 0
+  }
 }
+
 @keyframes progress-bar-stripes {
-    from {
-        background-position: 40px 0
-    }
-    to {
-        background-position: 0 0
-    }
+  from {
+    background-position: 40px 0
+  }
+  to {
+    background-position: 0 0
+  }
 }
